# File_Compression

./: CMakeLists.txt  README.md
include/: Compressor.hpp  HuffmanTree.hpp
src/: Compressor.cpp  HuffmanTree.cpp  main.cpp
test/: test.ps1
